--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 }
 main.main {
     width: 340px;
-    height: 475px;
+    height: 400px;
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
@@ -84,7 +84,7 @@ main.main {
     text-align: center;
 }
 
-h2 {
+.info h3 {
     margin-bottom: 10px;
     font-weight: 700;
 }
@@ -97,10 +97,12 @@ h2 {
     padding: 20px 35px;
     text-align: center;
     border-top: 1px solid var(--gray);
+    font-size: 15px;
 }
 
-h3 {
-    font-weight: 700;
+
+.stats h3 {
+    margin-bottom: 5px;
 }
 
 p {
