--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main.main {
 .info h3 {
     margin-bottom: 10px;
     font-weight: 700;
+    color: var(--dark-blue);
 }
 
 
@@ -103,6 +104,7 @@ main.main {
 
 .stats h3 {
     margin-bottom: 5px;
+    color: var(--dark-blue);
 }
 
 p {
